--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,6 +15,19 @@
 		<a href="/about/">About</a>
 		<a href="/blog/">Blog</a>
 
-		<h1>Hello!</h1>
+		<h1>Blog</h1>
+		<p>Blog!</p>
+
+		<ul>
+			<li>
+				<a href="/posts/first-post/">First Post</a>
+			</li>
+			<li>
+				<a href="/posts/second-post/">Second Post</a>
+			</li>
+			<li>
+				<a href="/posts/third-post/">Third Post</a>
+			</li>
+		</ul>
 	</body>
 </html>
